fix bug - x overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: #e8ffff;
+  overflow-x: hidden;
 }
 
 
